fixed alignment on loading gif. made textbox rounded

--- a/src/main/resources/public/styles.css
+++ b/src/main/resources/public/styles.css
@@ -14,7 +14,11 @@ h1 {
 }
 
 #loadingImage {
-  visibility: hidden;
+    visibility: hidden;
+    position: absolute;
+    width: 100%;
+    margin-top: -125px;
+    z-index: 10;
 }
 
 #result {
@@ -26,6 +30,8 @@ h1 {
     text-align: left;
     max-width: 700px;
     margin: 0 auto;
+    border-radius: 4px;
+    background: white;
 }
 
 #displayContents {
